Tweak spacing on about dialog (#18993)
Some minor styling tweaks to the about page.

- Tweaking the spacing of the version-checking / update available text.
- Wrapping the hyperlinkbuttons in a StackPanel so it's easier to set a
negative margin so they are visually aligned with the version / title
text.

Closes #18994

--- a/src/cascadia/TerminalApp/AboutDialog.xaml
+++ b/src/cascadia/TerminalApp/AboutDialog.xaml
@@ -28,18 +28,18 @@
         </TextBlock>
 
         <StackPanel Orientation="Vertical">
-            <StackPanel Padding="0,4,0,4"
+            <StackPanel Padding="0,16,0,16"
                         VerticalAlignment="Center"
                         Orientation="Horizontal"
+                        Spacing="8"
                         Visibility="{x:Bind CheckingForUpdates, Mode=OneWay}">
                 <mux:ProgressRing Width="16"
                                   Height="16"
                                   IsActive="True"
                                   IsIndeterminate="True" />
-                <TextBlock x:Uid="AboutDialog_CheckingForUpdatesLabel"
-                           Padding="4,0,0,0" />
+                <TextBlock x:Uid="AboutDialog_CheckingForUpdatesLabel" />
             </StackPanel>
-            <StackPanel Padding="0,4,0,4"
+            <StackPanel Padding="0,16,0,16"
                         VerticalAlignment="Center"
                         Orientation="Vertical"
                         Visibility="{x:Bind UpdatesAvailable, Mode=OneWay}">
@@ -51,15 +51,18 @@
             </StackPanel>
         </StackPanel>
 
-        <HyperlinkButton x:Uid="AboutDialog_SourceCodeLink"
-                         NavigateUri="https://go.microsoft.com/fwlink/?linkid=2203152" />
-        <HyperlinkButton x:Uid="AboutDialog_DocumentationLink"
-                         NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125416" />
-        <HyperlinkButton x:Uid="AboutDialog_ReleaseNotesLink"
-                         NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125417" />
-        <HyperlinkButton x:Uid="AboutDialog_PrivacyPolicyLink"
-                         NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125418" />
-        <HyperlinkButton x:Uid="AboutDialog_ThirdPartyNoticesLink"
-                         Click="_ThirdPartyNoticesOnClick" />
+        <StackPanel Margin="-12,0,0,0"
+                    Orientation="Vertical">
+            <HyperlinkButton x:Uid="AboutDialog_SourceCodeLink"
+                             NavigateUri="https://go.microsoft.com/fwlink/?linkid=2203152" />
+            <HyperlinkButton x:Uid="AboutDialog_DocumentationLink"
+                             NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125416" />
+            <HyperlinkButton x:Uid="AboutDialog_ReleaseNotesLink"
+                             NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125417" />
+            <HyperlinkButton x:Uid="AboutDialog_PrivacyPolicyLink"
+                             NavigateUri="https://go.microsoft.com/fwlink/?linkid=2125418" />
+            <HyperlinkButton x:Uid="AboutDialog_ThirdPartyNoticesLink"
+                             Click="_ThirdPartyNoticesOnClick" />
+        </StackPanel>
     </StackPanel>
 </ContentDialog>
