--- a/src/cascadia/TerminalSettingsEditor/EditColorScheme.xaml
+++ b/src/cascadia/TerminalSettingsEditor/EditColorScheme.xaml
@@ -84,7 +84,8 @@
     </Page.Resources>
 
     <StackPanel Style="{StaticResource SettingsStackStyle}">
-        <Border MaxWidth="{StaticResource StandardControlMaxWidth}">
+        <Border MaxWidth="{StaticResource StandardControlMaxWidth}"
+                CornerRadius="{StaticResource ControlCornerRadius}">
             <!--  Preview of the selected scheme  -->
             <Grid Width="348"
                   MaxWidth="{StaticResource StandardControlMaxWidth}"
