--- a/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Appearance.xaml
@@ -63,7 +63,8 @@
                     Margin="0,12,0,0"
                     Style="{StaticResource SettingsStackStyle}">
             <!--  Control Preview  -->
-            <Border MaxWidth="{StaticResource StandardControlMaxWidth}">
+            <Border MaxWidth="{StaticResource StandardControlMaxWidth}"
+                    CornerRadius="{StaticResource ControlCornerRadius}">
                 <Border x:Name="ControlPreview"
                         Width="400"
                         Height="180"
